--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         tools:text="0:47" />
 
     <TextView
-        android:id="@+id/tvRemainingTime"
+        android:id="@+id/tvTotalTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -77,6 +77,27 @@
         app:layout_constraintTop_toBottomOf="@id/seekBarTime"
         app:layout_constraintRight_toRightOf="parent"
         tools:text="0:42"
+        />
+
+    <SeekBar
+        android:id="@+id/seekBarSongVolume"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvCurrTime" />
+
+    <TextView
+        android:id="@+id/tvSongVolume"
+        android:text="@string/song_volume"
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/seekBarSongVolume"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         />
 
 
