--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -19,7 +19,7 @@
         android:foreground="?selectableItemBackground"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/btnStop"
-        app:layout_constraintTop_toBottomOf="@id/ivMetroGnome"
+        app:layout_constraintTop_toBottomOf="@id/ivTitle"
         android:contentDescription="@string/play_and_pause_button" />
 
     <ImageButton
@@ -33,7 +33,7 @@
         android:text="@string/stopButton"
         app:layout_constraintLeft_toRightOf="@id/btnPlay"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivMetroGnome"
+        app:layout_constraintTop_toBottomOf="@id/ivTitle"
         android:contentDescription="@string/stop_button"/>
 
     <SeekBar
@@ -92,13 +92,26 @@
         />
 
     <ImageView
-        android:id="@+id/ivMetroGnome"
+        android:id="@+id/ivTitle"
         android:layout_width="246dp"
         android:layout_height="108dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/MetroGnome"
         android:src="@drawable/group_3"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/ivGnome"
+        android:contentDescription="@string/MetroGnome"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/gnome"
+        app:layout_constraintHorizontal_bias="0.699"
+        app:layout_constraintLeft_toLeftOf="@id/ivTitle"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
