--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -8,6 +8,44 @@
     android:focusable="true"
     >
 
+    <ImageView
+        android:id="@+id/ivTitle"
+        android:layout_width="246dp"
+        android:layout_height="108dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/MetroGnome"
+        android:src="@drawable/group_3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/ivGnome"
+        android:contentDescription="@string/MetroGnome"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/gnome"
+        app:layout_constraintHorizontal_bias="0.699"
+        app:layout_constraintLeft_toLeftOf="@id/ivTitle"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvAppDescription"
+        android:textSize="24sp"
+        android:textColor="@color/colorAccent"
+        android:textAlignment="center"
+        android:text="MetroGnome generates a click track to go along with any song!"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivTitle"
+        app:layout_constraintBottom_toTopOf="@id/btnUploadFile"
+        />
+
     <Button
         android:id="@+id/btnUploadFile"
         android:text="@string/upload_file"
@@ -17,6 +55,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"
         />
 
 
