--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -37,12 +37,26 @@
         android:textSize="24sp"
         android:textColor="@color/colorText"
         android:textAlignment="center"
-        android:text="MetroGnome generates a click track to go along with any song!"
+        android:text="@string/app_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivTitle"
+        app:layout_constraintBottom_toTopOf="@id/tvUploadInstructions"
+        />
+
+    <TextView
+        android:id="@+id/tvUploadInstructions"
+        android:textSize="24sp"
+        android:textColor="@color/colorText"
+        android:textAlignment="center"
+        android:text="@string/upload_instructions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvAppDescription"
         app:layout_constraintBottom_toTopOf="@id/btnUploadFile"
         />
 
@@ -65,6 +79,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:visibility="gone"
+        />
+
+    <TextView
+        android:id="@+id/tvPleaseWait"
+        android:text="@string/please_wait"
+        android:textSize="24sp"
+        android:textColor="@color/colorText"
+        android:textAlignment="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/progressBar"
         android:visibility="gone"
         />
 
