--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -34,31 +34,57 @@
 
     <TextView
         android:id="@+id/tvAppDescription"
-        android:textSize="24sp"
-        android:textColor="@color/colorText"
-        android:textAlignment="center"
-        android:text="@string/app_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/app_description"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/tvUploadInstructions"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivTitle"
-        app:layout_constraintBottom_toTopOf="@id/tvUploadInstructions"
-        />
+        app:layout_constraintTop_toBottomOf="@id/ivTitle" />
 
     <TextView
         android:id="@+id/tvUploadInstructions"
-        android:textSize="24sp"
-        android:textColor="@color/colorText"
-        android:textAlignment="center"
-        android:text="@string/upload_instructions"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/upload_instructions"
+        android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@id/btnUploadFile"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvAppDescription" />
+
+    <EditText
+        android:id="@+id/etFrequency"
+        android:hint="@string/click_frequency"
+        android:gravity="start"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvAppDescription"
+        app:layout_constraintTop_toBottomOf="@id/tvUploadInstructions"
+        app:layout_constraintBottom_toTopOf="@id/etDuration"
+        android:autofillHints="@string/click_frequency"
+        android:inputType="numberDecimal" />
+
+    <EditText
+        android:id="@+id/etDuration"
+        android:hint="@string/click_frequency"
+        android:gravity="start"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etFrequency"
         app:layout_constraintBottom_toTopOf="@id/btnUploadFile"
-        />
+        android:autofillHints="@string/click_frequency"
+        android:inputType="numberDecimal" />
 
     <Button
         android:id="@+id/btnUploadFile"
@@ -67,8 +93,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etDuration"
         />
 
     <ProgressBar
