--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -41,10 +41,12 @@
         android:padding="10dp"
         android:textColor="@color/colorText"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@id/tvUploadInstructions"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivTitle" />
+        app:layout_constraintTop_toBottomOf="@id/ivTitle"
+        app:layout_constraintBottom_toTopOf="@id/tvUploadInstructions"
+        app:layout_constraintVertical_chainStyle="packed"
+        />
 
     <TextView
         android:id="@+id/tvClickSettings"
