--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorText">#000000</color>
+    <color name="lavenderPrimary">#788EFF</color>
+    <color name="lavenderAlt">#7989C3</color>
 </resources>
