--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -5,9 +5,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white"
-    android:clickable="true"
-    android:focusable="true"
     >
+
+    <ImageView
+        android:id="@+id/ivTitle"
+        android:layout_width="246dp"
+        android:layout_height="108dp"
+        android:layout_marginTop="24dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/MetroGnome"
+        android:src="@drawable/group_3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <ImageView
+        android:id="@+id/ivGnome"
+        android:contentDescription="@string/MetroGnome"
+        android:layout_width="85dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="34dp"
+        android:src="@drawable/gnome"
+        app:layout_constraintHorizontal_bias="0.699"
+        app:layout_constraintLeft_toLeftOf="@id/ivTitle"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:src="@drawable/play_button"
@@ -75,7 +98,7 @@
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvCurrTime" />
@@ -91,30 +114,17 @@
         app:layout_constraintRight_toRightOf="parent"
         />
 
-    <ImageView
-        android:id="@+id/ivTitle"
-        android:layout_width="246dp"
-        android:layout_height="108dp"
-        android:layout_marginTop="24dp"
-        android:adjustViewBounds="true"
-        android:contentDescription="@string/MetroGnome"
-        android:src="@drawable/group_3"
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvSongVolume"
+        android:layout_marginTop="45dp"
+        android:text="@string/new_upload_button"
         />
 
-    <ImageView
-        android:id="@+id/ivGnome"
-        android:contentDescription="@string/MetroGnome"
-        android:layout_width="85dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="34dp"
-        android:src="@drawable/gnome"
-        app:layout_constraintHorizontal_bias="0.699"
-        app:layout_constraintLeft_toLeftOf="@id/ivTitle"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
