--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -30,44 +30,20 @@
         app:layout_constraintHorizontal_bias="0.699"
         app:layout_constraintLeft_toLeftOf="@id/ivTitle"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
-    <ImageButton
-        android:src="@drawable/play_button"
-        android:id="@+id/btnPlay"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:scaleType="fitCenter"
-        android:background="@android:color/transparent"
-        android:foreground="?selectableItemBackground"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/btnStop"
-        app:layout_constraintTop_toBottomOf="@id/ivTitle"
-        android:contentDescription="@string/play_and_pause_button" />
-
-    <ImageButton
-        android:id="@+id/btnStop"
-        android:src="@drawable/stop_button"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:scaleType="fitCenter"
-        android:background="@android:color/transparent"
-        android:foreground="?selectableItemBackground"
-        android:text="@string/stopButton"
-        app:layout_constraintLeft_toRightOf="@id/btnPlay"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivTitle"
-        android:contentDescription="@string/stop_button"/>
 
     <SeekBar
         android:id="@+id/seekBarTime"
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="125dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnPlay" />
+        app:layout_constraintTop_toBottomOf="@id/ivTitle"
+        />
 
 
     <TextView
@@ -79,7 +55,8 @@
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/seekBarTime"
-        tools:text="0:47" />
+        tools:text="0:47"
+        />
 
     <TextView
         android:id="@+id/tvTotalTime"
@@ -93,6 +70,35 @@
         tools:text="0:42"
         />
 
+    <ImageButton
+        android:src="@drawable/play_button"
+        android:layout_marginTop="10dp"
+        android:id="@+id/btnPlay"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:foreground="?selectableItemBackground"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnStop"
+        app:layout_constraintTop_toBottomOf="@id/tvCurrTime"
+        android:contentDescription="@string/play_and_pause_button" />
+
+    <ImageButton
+        android:id="@+id/btnStop"
+        android:src="@drawable/stop_button"
+        android:layout_marginTop="10dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        android:foreground="?selectableItemBackground"
+        android:text="@string/stopButton"
+        app:layout_constraintLeft_toRightOf="@id/btnPlay"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTotalTime"
+        android:contentDescription="@string/stop_button"/>
+
 
     <Button
         android:id="@+id/btnSaveFile"
@@ -100,7 +106,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/seekBarTime"
+        app:layout_constraintTop_toBottomOf="@id/btnPlay"
         app:layout_constraintBottom_toTopOf="@id/btnUploadAgain"
         android:layout_marginTop="45dp"
         android:text="@string/save_file"
