--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -33,16 +33,34 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
+    <TextView
+        android:id="@+id/tvSongTitle"
+        android:layout_width="0dp"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="75dp"
+        android:layout_marginRight="75dp"
+        android:layout_marginTop="125dp"
+        app:layout_constraintBottom_toTopOf="@id/seekBarTime"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ivTitle"
+        android:textSize="28sp"
+        android:textColor="@android:color/black"
+
+        android:singleLine="true"
+        android:ellipsize="end"
+        tools:text="Song Title" />
 
     <SeekBar
         android:id="@+id/seekBarTime"
         android:layout_width="match_parent"
         android:layout_height="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="125dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ivTitle"
+        app:layout_constraintTop_toBottomOf="@id/tvSongTitle"
         />
 
 
